@@ -71,16 +71,20 @@ static enum cb_directive_action		current_cmd = PLEX_ACT_IF;
 
 /* Local functions */
 
+/* Strips the given string from its quotation characters, if any.  Returns its
+   argument as is otherwise. */
 static char *
-fix_filename (char *name)
+unquote (char *name)
 {
-	/* remove quotation from alphanumeric literals */
-	if (name[0] == '\'' || name[0] == '\"') {
+	size_t size;
+	if ((name[0] == '\'' || name[0] == '"') && (size = strlen (name)) > 1 &&
+	    (name[0] == name[size - 1])) {
+		name[size - 1] = '\0';
 		name++;
-		name[strlen (name) - 1] = 0;
 	}
 	return name;
 }
+#define fix_filename(filename) unquote (filename)
 
 static char *
 fold_lower (char *name)
@@ -136,7 +140,7 @@ ppp_set_value (struct cb_define_struct *p, const char *value)
 	const char	*s;
 	size_t		size;
 	unsigned int	dotseen;
-	
+
 	p->value = NULL;
 	p->sign = 0;
 	p->int_part = 0;
@@ -479,7 +483,7 @@ append_to_turn_list (struct cb_text_list *ec_names, int enable, int with_locatio
 	l->next = NULL;
 	/* The line number is set properly in the scanner */
 	l->line = -1;
-	
+
 	if (cb_turn_list) {
 		for (turn_list_end = cb_turn_list;
 		     turn_list_end->next;
@@ -705,6 +709,7 @@ ppparse_clear_vars (const struct cb_define_struct *p)
 %type <l>	alnum_equality
 %type <l>	alnum_equality_list
 %type <l>	ec_list
+%type <s>	unquoted_literal
 
 %type <r>	copy_replacing
 %type <r>	replacing_list
@@ -830,15 +835,9 @@ set_choice:
 		fprintf (ppout, "#ADDSYN %s %s\n", l->text, l->next->text);
 	}
   }
-| ASSIGN LITERAL
+| ASSIGN unquoted_literal
   {
 	char	*p = $2;
-	size_t	size;
-
-	/* Remove surrounding quotes/brackets */
-	++p;
-	size = strlen (p) - 1;
-	p[size] = '\0';
 
 	if (!cb_strcasecmp (p, "EXTERNAL")) {
 		fprintf (ppout, "#ASSIGN %d\n", (int)CB_ASSIGN_EXT_FILE_NAME_REQUIRED);
@@ -846,22 +845,16 @@ set_choice:
 		fprintf (ppout, "#ASSIGN %d\n", (int)CB_ASSIGN_VARIABLE_DEFAULT);
 	} else {
 		ppp_error_invalid_option ("ASSIGN", p);
-	}	
+	}
   }
 | BOUND
   {
 	/* Enable EC-BOUND-SUBSCRIPT checking */
 	append_to_turn_list (ppp_list_add (NULL, "EC-BOUND-SUBSCRIPT"), 1, 0);
   }
-| CALLFH LITERAL
+| CALLFH unquoted_literal
   {
-	char	*p = $2;
-	/* Remove surrounding quotes/brackets */
-	size_t	size;
-	++p;
-	size = strlen (p) - 1;
-	p[size] = '\0';
-	fprintf (ppout, "#CALLFH \"%s\"\n", p);
+	fprintf (ppout, "#CALLFH \"%s\"\n", $2);
   }
 | CALLFH
   {
@@ -872,15 +865,9 @@ set_choice:
 	/* Enable EC-DATA-INCOMPATIBLE checking */
 	append_to_turn_list (ppp_list_add (NULL, "EC-DATA-INCOMPATIBLE"), 1, 0);
   }
-| COMP1 LITERAL
+| COMP1 unquoted_literal
   {
 	char	*p = $2;
-	size_t	size;
-
-	/* Remove surrounding quotes/brackets */
-	++p;
-	size = strlen (p) - 1;
-	p[size] = '\0';
 
 	if (!cb_strcasecmp (p, "BINARY")) {
 		cb_binary_comp_1 = 1;
@@ -890,15 +877,9 @@ set_choice:
 		ppp_error_invalid_option ("COMP1", p);
 	}
   }
-| DPC_IN_DATA LITERAL
+| DPC_IN_DATA unquoted_literal
   {
 	char	*p = $2;
-	size_t	size;
-
-	/* Remove surrounding quotes/brackets */
-	++p;
-	size = strlen (p) - 1;
-	p[size] = '\0';
 
 	if (!cb_strcasecmp (p, "XML")) {
 		cb_dpc_in_data = CB_DPC_IN_XML;
@@ -910,15 +891,9 @@ set_choice:
 		ppp_error_invalid_option ("DPC-IN-DATA", p);
 	}
   }
-| FOLDCOPYNAME _as LITERAL
+| FOLDCOPYNAME _as unquoted_literal
   {
 	char	*p = $3;
-	size_t	size;
-
-	/* Remove surrounding quotes/brackets */
-	++p;
-	size = strlen (p) - 1;
-	p[size] = '\0';
 
 	if (!cb_strcasecmp (p, "UPPER")) {
 		cb_fold_copy = COB_FOLD_UPPER;
@@ -964,7 +939,7 @@ set_choice:
 	/* Disable EC-BOUND-SUBSCRIPT and -REF-MOD checking */
 	struct cb_text_list	*txt = ppp_list_add (NULL, "EC-BOUND-SUBSCRIPT");
 	txt = ppp_list_add (txt, "EC-BOUND-REF-MOD");
-	
+
 	append_to_turn_list (txt, 0, 0);
   }
 | ODOSLIDE
@@ -985,15 +960,9 @@ set_choice:
 		fprintf (ppout, "#REMOVE %s\n", l->text);
 	}
   }
-| SOURCEFORMAT _as LITERAL
+| SOURCEFORMAT _as unquoted_literal
   {
 	char	*p = $3;
-	size_t	size;
-
-	/* Remove surrounding quotes/brackets */
-	++p;
-	size = strlen (p) - 1;
-	p[size] = '\0';
 
 	if (!cb_strcasecmp (p, "FIXED")) {
 		cb_source_format = CB_FORMAT_FIXED;
@@ -1025,7 +994,7 @@ set_choice:
   {
 	char	*p = $2;
 	char	ep = 0;
-	
+
 	/* Remove surrounding quotes/brackets */
 	if (p) {
 		size_t	size;
@@ -1722,6 +1691,23 @@ lead_trail:
 | TRAILING
   {
 	$$ = CB_REPLACE_TRAILING;
+  }
+;
+
+unquoted_literal:
+  LITERAL
+  {
+	/* Do not reuse unquote as some literals here may be delimited with
+	   parentheses */
+	char	*p = $1;
+	size_t	size;
+
+	/* Remove surrounding quotes/brackets */
+	++p;
+	size = strlen (p) - 1;
+	p[size] = '\0';
+
+	$$ = p;
   }
 ;
 
