@@ -3,6 +3,11 @@
 
 	* config.def, parser.y: add support for the STOP ERROR statement
 
+2022-01-25  Nicolas Berthier <nicolas.berther@ocamlpro.com>
+
+	* ppparse.y (unquote, fix_filename): factorize code for
+	  unquotation of alphanumeric literals
+
 2022-05-31  Simon Sobisch <simonsobisch@gnu.org>
 
 	* cobc.c (cobc_check_string): replaced single string cache by an array
